# noBS

./: .env.example  .gitignore  CLAUDE.md  README.md  SUMMARIZATION_PLAN.md  config.py  index.html  main.py  pyproject.toml
.github/workflows/: pull-bs.yml
data/: news_digest.md  news_digest_2026-01-04.md  news_source.txt
src/: config.py  main.py  news_categorizer.py  news_summarizer.py  summarize_news.py
templates/: index.html
