[project]
name = "NoBS"
version = "0.1.0"
description = "NoBS is a news aggregation for financial, market and business news, no bull, just pure good stuff"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "flask>=3.0.0",
    "feedparser>=6.0.10",
    "flask-socketio>=5.3.6",
    "pytz>=2023.3.post1",
    "html2text>=2020.1.16",
    "litellm>=1.54.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
